# Journal

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  start.sh
app/backend/: Dockerfile  background_sync.py  main.py  pyproject.toml
app/backend/api/: client.py  config.py  database.py  models.py  routes.py  sync.py
app/frontend/: Dockerfile  README.md  index.html  package.json  tsconfig.json
app/frontend/src/: App.tsx  index.css
app/frontend/src/components/: Calendar.tsx  ConnectionPanel.tsx  CurrencyToggle.tsx  DataTable.tsx  EmptyState.tsx  LoadingSpinner.tsx  Sidebar.tsx  StatCard.tsx  TradeDetailModal.tsx  TradeFilters.tsx  TradeReviewModal.tsx
app/frontend/src/config/: api.ts
app/frontend/src/hooks/: useCurrency.tsx  useTheme.tsx
app/frontend/src/pages/: Analytics.tsx  DailyReviews.tsx  Dashboard.tsx  Psychology.tsx  Risk.tsx  Safety.tsx  TaxReport.tsx
app/frontend/src/utils/: errorNormalization.ts  theme.ts
docs/: implementation_plan.md
obsidian/: .env.example  DEVELOPER.md  Delta-TransactionLog-OrderHistory_1778045806327.csv  README.md  main.py  pyproject.toml  sync.sh
obsidian/scripts/: debug_aggregate.py  debug_fills.py  debug_trades.py
obsidian/src/: ai.py  client.py  config.py  db.py  models.py
obsidian/src/writer/: __init__.py  _helpers.py  charts.py  dashboard.py  notes.py  queries.py  templates.py
obsidian/tests/: test_connection.py  test_models.py  test_writer.py
