[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]
